# Radeon_HD_glDrawBuffers_demo

./: CMakeLists.txt  README  main.cpp
lib/: glfw3.lib  libglew32.lib
